Corrections according to comments